--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <script src="hello_world_controller.js"></script>
 <div ng-app="HelloWorldApp">
     <div ng-controller="HelloWorldController">
-        <h1>{{greeting}}</h1>
+        <div id="top">
+            <div id="topleft">
+                <img src="companylogo.png">
+            </div>
+
+        </div>
+
     </div>
 </div>
